--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 https://github.com/practiceprobs/problemsets
 Most problems from practiceprobs.com are included here, but some problems only exist on the site.
 Solutions are hosted on practiceprobs.com
+Free references:
+https://github.com/matinmahmoudi/Kaggle/tree/ca19db4b2332196b8652ee6e384c1e8b31d37f1c
